# Battleship

./: README.md
src/BattleshipClient/: CMakeLists.txt  Client.cpp  Client.h  MainClient.cpp  MainClient.h  SubClient.cpp  SubClient.h  SubServer.cpp  SubServer.h  main.cpp
src/BattleshipClient/GUI/: Board.cpp  Board.h  Color.cpp  Color.h  GUI.cpp  GUI.h  Terminal.cpp  Terminal.h
src/BattleshipClient/GUI/Graphics/: Box.cpp  Box.h  Drawable.cpp  Drawable.h  Grid.cpp  Grid.h  Mark.cpp  Mark.h  Ship.cpp  Ship.h  TextBox.cpp  TextBox.h
src/BattleshipServer/: CMakeLists.txt  MainServer.cpp  MainServer.h  Server.cpp  Server.h  main.cpp
src/BattleshipServer/data/: MatchList.cpp  MatchList.h  RegistredUsers.cpp  RegistredUsers.h
